--- a/sass/components/_block.scss
+++ b/sass/components/_block.scss
@@ -2,12 +2,12 @@
   display: flex;
   padding-top: 60px;
   padding-bottom: 60px;
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
 }
 
 .block__list {
-  width: 100vw;
+  width: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -30,14 +30,16 @@
 }
 
 .attribute {
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .attribute__icon {
-  width: 100vw;
+  width: 100%;
+  height: 120px;
+  padding: 25px 0;
   background-color: #f5f4fa;
   border-radius: 4px;
 }
