--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,7 +4,7 @@
   background-color: $secondaryBackgroundColor;
   padding-top: 60px;
   padding-bottom: 60px;
-  width: 100vw;
+  width: 100%;
 
   &:hover,
   &:focus {
