--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -1,5 +1,5 @@
 .main-page {
-  width: 100vw;
+  width: 100%;
   height: 400px;
   background-color: $secondaryBackgroundColor;
   background-image: linear-gradient(
