--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -1,6 +1,6 @@
 .ourteam {
   background-color: $thirdBackgroundColor;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -16,7 +16,7 @@
 .ourteam__list {
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
   margin: 0;
   gap: 30px;
 }
