--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,7 +1,7 @@
 .page-header {
   border-bottom: 1px solid #ececec;
   background-color: $secondaryColor;
-  width: 100vw;
+  width: 100%;
   display: flex;
   margin: 0;
   flex-direction: column;
@@ -11,7 +11,7 @@
 .page-header__overlay {
   display: flex;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 15px 16px;
   justify-content: space-between;
   margin: 0 auto;
