--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -81,7 +81,7 @@
 
 .contact-form {
   display: flex;
-  width: 450px;
+  width: 100%;
   flex-direction: column;
   align-items: center;
   gap: 20px;
