--- a/css/main.css
+++ b/css/main.css
@@ -442,7 +442,7 @@ h4 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 450px;
+  width: 100%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -703,7 +703,7 @@ h4 {
   font-weight: 900;
   font-size: 26px;
   line-height: 1.61;
-  width: 365px;
+  max-width: 365px;
   margin-top: 118px;
   margin-bottom: 0;
   text-align: center;
@@ -1328,6 +1328,7 @@ h4 {
           justify-content: center;
   margin: 0 auto;
 }
+
 .our-clients__overlay {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1343,6 +1344,7 @@ h4 {
           flex-direction: column;
   margin: 0 auto;
 }
+
 .our-clients__headline {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1355,7 +1357,8 @@ h4 {
   margin-bottom: 30px;
   margin-top: 60px;
 }
-.our-clients .our-clients__list {
+
+.our-clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1371,7 +1374,8 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.our-clients .our-clients__item {
+
+.our-clients__item {
   fill: #afb1b8;
   height: 92px;
   border-radius: 4px;
@@ -1389,11 +1393,13 @@ h4 {
   -webkit-animation: cursormovein 0.5s forwards;
           animation: cursormovein 0.5s forwards;
 }
-.our-clients .our-clients__item:hover {
+
+.our-clients__item:hover {
   -webkit-animation: cursormoveout 0.5s forwards;
           animation: cursormoveout 0.5s forwards;
 }
-.our-clients .our-clients__icon {
+
+.our-clients__icon {
   width: 106px;
 }
 
@@ -1445,7 +1451,7 @@ h4 {
   .our-clients__list {
     margin-bottom: 60px;
   }
-  .our-clients__item {
+  .our-clients_item {
     width: 210px;
   }
 }
@@ -1492,7 +1498,7 @@ h4 {
 }
 .modal {
   position: fixed;
-  width: 450px;
+  max-width: 450px;
   height: 609px;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1761,7 +1767,7 @@ h4 {
     height: 581px;
   }
   .form-group__grid--textarea {
-    width: 448px;
+    max-width: 448px;
     height: 120px;
   }
   .close__btn {
