--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -43,7 +43,7 @@
   font-weight: 900;
   font-size: 26px;
   line-height: 1.61;
-  width: 365px;
+  max-width: 365px;
   margin-top: 118px;
   margin-bottom: 0;
   text-align: center;
