--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  width: 450px;
+  max-width: 450px;
   height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -196,7 +196,7 @@
     height: 581px;
   }
   .form-group__grid--textarea {
-    width: 448px;
+    max-width: 448px;
     height: 120px;
   }
   .close__btn {
