--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -197,7 +197,7 @@
   .main-page__title {
     font-size: 44px;
     line-height: 1.36;
-    width: 696px;
+    max-width: 696px;
     margin-top: 200px;
     margin-bottom: 30px;
     text-align: center;
