--- a/css/main.css
+++ b/css/main.css
@@ -817,7 +817,7 @@ h4 {
   .main-page__title {
     font-size: 44px;
     line-height: 1.36;
-    width: 696px;
+    max-width: 696px;
     margin-top: 200px;
     margin-bottom: 30px;
     text-align: center;
