--- a/css/main.css
+++ b/css/main.css
@@ -62,14 +62,12 @@ h4 {
   h2 {
     font-size: 36px;
   }
-  h4 {
-    width: 448px;
-  }
-  .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .logo {
   color: #000000;
   font-weight: 700;
@@ -1498,7 +1496,7 @@ h4 {
 }
 .modal {
   position: fixed;
-  max-width: 450px;
+  max-width: 528px;
   height: 609px;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1557,6 +1555,7 @@ h4 {
 }
 
 .form-group__headline {
+  width: 90%;
   text-align: center;
 }
 
@@ -1633,7 +1632,7 @@ h4 {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-group__grid--textarea {
-  width: 370px;
+  max-width: 448px;
   height: 138px;
   resize: none;
   outline: 0;
@@ -1767,7 +1766,6 @@ h4 {
     height: 581px;
   }
   .form-group__grid--textarea {
-    max-width: 448px;
     height: 120px;
   }
   .close__btn {
