--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  max-width: 450px;
+  max-width: 528px;
   height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -37,6 +37,7 @@
   padding: 40px;
 }
 .form-group__headline {
+  width: 90%;
   text-align: center;
 }
 .form-group__label {
@@ -99,7 +100,7 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   &--textarea {
-    width: 370px;
+    max-width: 448px;
     height: 138px;
     resize: none;
     outline: 0;
@@ -196,7 +197,6 @@
     height: 581px;
   }
   .form-group__grid--textarea {
-    max-width: 448px;
     height: 120px;
   }
   .close__btn {
