--- a/css/main.css
+++ b/css/main.css
@@ -1760,6 +1760,15 @@ h4 {
   margin-left: -21px;
 }
 
+@media (min-width: 480px) and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+  .close__btn {
+    left: 412px;
+  }
+}
 @media (min-width: 1200px) {
   .modal {
     width: 528px;
