--- a/css/main.css
+++ b/css/main.css
@@ -63,11 +63,6 @@ h4 {
     font-size: 36px;
   }
 }
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .logo {
   color: #000000;
   font-weight: 700;
@@ -80,9 +75,7 @@ h4 {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.logo:hover,
-.logo:focus {
+.logo:hover, .logo:focus {
   color: #2196f3;
 }
 
@@ -102,7 +95,6 @@ h4 {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
 .page-header__overlay {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -117,7 +109,6 @@ h4 {
           justify-content: space-between;
   margin: 0 auto;
 }
-
 .page-header__logo {
   color: #000000;
   font-family: "raleway";
@@ -292,6 +283,13 @@ h4 {
   .page-header__logo {
     margin-left: 0;
   }
+  .page-header__overlay {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 1170px;
+    height: 80px;
+    margin: 0 auto;
+  }
   .contact {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -318,13 +316,6 @@ h4 {
   .navigation__item {
     gap: 46px;
     width: 254px;
-  }
-  .page-header__overlay {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    width: 1170px;
-    height: 80px;
-    margin: 0 auto;
   }
 }
 .footer {
@@ -581,10 +572,10 @@ h4 {
             justify-content: center;
     margin: 0 auto;
   }
-  .contact-form__grid {
+  .contact__form__grid {
     width: 405px;
   }
-  .contact-form__input {
+  .contact__form__input {
     width: 405px;
   }
 }
@@ -624,6 +615,10 @@ h4 {
   }
 }
 @media (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .footer {
     padding-top: 72px;
     padding-bottom: 60px;
@@ -647,14 +642,11 @@ h4 {
     margin: 0 auto;
   }
   .footer__block__list {
-    display: block;
-  }
-  .footer__list {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: start;
   }
-  .footer__item:not(:last-child) {
+  .footer__block__item:not(:last-child) {
     padding-bottom: 9px;
   }
   .contact-form {
@@ -683,30 +675,16 @@ h4 {
   background-repeat: no-repeat;
   margin: 0 auto;
 }
-
-@media (min-device-pixel-ratio: 2), (min-resolution: 192pi), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
-  .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_960_800.png");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_960_800.png");
-  }
-}
-@media (min-device-pixel-ratio: 3), (min-resolution: 268pi), (-webkit-min-device-pixel-ratio: 3), (min-resolution: 3dppx) {
-  .main-page {
-    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_1440_1200.jpg");
-    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_1440_1200.jpg");
-  }
-}
 .main-page__title {
   color: #ffffff;
   font-weight: 900;
   font-size: 26px;
   line-height: 1.61;
-  max-width: 365px;
+  width: 365px;
   margin-top: 118px;
   margin-bottom: 0;
   text-align: center;
 }
-
 .main-page__button {
   background-color: #2196f3;
   color: #ffffff;
@@ -721,7 +699,6 @@ h4 {
   margin-bottom: 118px;
   padding: 10px 41px 10px 42px;
 }
-
 .main-page__overlay {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -736,6 +713,18 @@ h4 {
   margin: 0 auto;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192pi), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+  .main-page {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_960_800.png");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_960_800.png");
+  }
+}
+@media (min-device-pixel-ratio: 3), (min-resolution: 268pi), (-webkit-min-device-pixel-ratio: 3), (min-resolution: 3dppx) {
+  .main-page {
+    background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_1440_1200.jpg");
+    background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_1440_1200.jpg");
+  }
+}
 @media (min-width: 480px) and (max-width: 767px) {
   .main-page {
     min-width: 480px;
@@ -798,33 +787,29 @@ h4 {
     background-repeat: no-repeat;
     margin: 0 auto;
   }
+  .main-page__title {
+    font-size: 44px;
+    line-height: 1.36;
+    width: 696px;
+    margin-top: 200px;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+  .main-page__button {
+    margin-bottom: 200px;
+    margin-top: 0;
+  }
 }
-@media (min-width: 1200px) and (min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 192pi), (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx) {
+@media (min-device-pixel-ratio: 2), (min-resolution: 192pi), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .main-page {
     background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img-header_3200_1200.jpg");
     background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img-header_3200_1200.jpg");
   }
 }
-@media (min-width: 1200px) and (min-device-pixel-ratio: 3), (min-width: 1200px) and (min-resolution: 268pi), (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 3), (min-width: 1200px) and (min-resolution: 3dppx) {
+@media (min-device-pixel-ratio: 3), (min-resolution: 268pi), (-webkit-min-device-pixel-ratio: 3), (min-resolution: 3dppx) {
   .main-page {
     background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/header/Img_header_4800_1800.jpg");
     background-image: linear-gradient(0deg, rgba(47, 48, 58, 0.4) 0%, rgba(47, 48, 58, 0.4) 100%), url("../images/header/Img_header_4800_1800.jpg");
-  }
-}
-@media (min-width: 1200px) {
-  .main-page__title {
-    font-size: 44px;
-    line-height: 1.36;
-    max-width: 696px;
-    margin-top: 200px;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-}
-@media (min-width: 1200px) {
-  .main-page__button {
-    margin-bottom: 200px;
-    margin-top: 0;
   }
 }
 .block {
@@ -836,7 +821,6 @@ h4 {
   width: 100%;
   margin: 0 auto;
 }
-
 .block__list {
   width: 100%;
   margin: 0 auto;
@@ -852,7 +836,6 @@ h4 {
           justify-content: center;
   gap: 30px;
 }
-
 .block__item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -865,11 +848,9 @@ h4 {
       -ms-flex-align: center;
           align-items: center;
 }
-
 .block__item:not(:last-child) {
   margin-bottom: 30px;
 }
-
 .block__delay {
   margin: 0 auto;
 }
@@ -887,7 +868,6 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .attribute__icon {
   width: 100%;
   height: 120px;
@@ -895,7 +875,6 @@ h4 {
   background-color: #f5f4fa;
   border-radius: 4px;
 }
-
 .attribute__title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -906,7 +885,6 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .attribute__text {
   color: #757575;
   font-size: 14px;
@@ -919,10 +897,10 @@ h4 {
   .block__list {
     width: 450px;
   }
-  .block__item {
+  .block__list__item {
     width: 450px;
   }
-  .block__item:nth-child(n) {
+  .block__list__item:nth-child(n) {
     margin-bottom: 0;
   }
   .attribute {
@@ -988,6 +966,10 @@ h4 {
   }
 }
 @media (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .block {
     margin-bottom: 0;
     padding-bottom: 0;
@@ -1120,13 +1102,12 @@ h4 {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  padding: 0;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto;
-  padding-bottom: 60px;
 }
-
 .ourteam__delay {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1137,7 +1118,6 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
 }
-
 .ourteam__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1150,11 +1130,9 @@ h4 {
   margin: 0;
   gap: 30px;
 }
-
 .ourteam__picture {
   width: 100%;
 }
-
 .ourteam__item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1175,28 +1153,20 @@ h4 {
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
 }
-
-.ourteam__item:not(:last-child) {
-  margin-bottom: 30px;
-}
-
 .ourteam__item:last-child {
   margin-bottom: 60px;
 }
-
 .ourteam__headline {
   width: 163px;
   margin-bottom: 30px;
   margin-top: 60px;
 }
-
 .ourteam__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.17;
   margin: 30px 99px 10px 99px;
 }
-
 .ourteam__position {
   color: #757575;
   font-size: 16px;
@@ -1259,6 +1229,8 @@ h4 {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     gap: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-bottom: 62px;
   }
   .ourteam__delay {
@@ -1269,20 +1241,22 @@ h4 {
     height: 536px;
     margin: 0;
   }
-  .ourteam__picture {
+  .ourteam__item:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .ourteam__item:last-child {
+    margin-bottom: 0;
+  }
+  .ourteam__item .ourteam__picture {
     width: 354px;
     height: 374px;
   }
 }
-.ourteam__item:not(:last-child) {
-  margin-bottom: 0;
-}
-
-.ourteam__item:last-child {
-  margin-bottom: 0;
-}
-
 @media (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .ourteam__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1325,9 +1299,10 @@ h4 {
       -ms-flex-pack: center;
           justify-content: center;
   margin: 0 auto;
+  padding: 0;
+  margin-top: 60px;
 }
-
-.our-clients__overlay {
+.our-clientss__overlay {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1342,7 +1317,6 @@ h4 {
           flex-direction: column;
   margin: 0 auto;
 }
-
 .our-clients__headline {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1352,10 +1326,7 @@ h4 {
           justify-content: center;
   width: 100%;
   margin-top: 0;
-  margin-bottom: 30px;
-  margin-top: 60px;
 }
-
 .our-clients__list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1368,12 +1339,12 @@ h4 {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 30px;
+  margin-top: 0;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 60px;
 }
-
 .our-clients__item {
   fill: #afb1b8;
   height: 92px;
@@ -1392,13 +1363,11 @@ h4 {
   -webkit-animation: cursormovein 0.5s forwards;
           animation: cursormovein 0.5s forwards;
 }
-
 .our-clients__item:hover {
   -webkit-animation: cursormoveout 0.5s forwards;
           animation: cursormoveout 0.5s forwards;
 }
-
-.our-clients__icon {
+.our-clients__item__icon {
   width: 106px;
 }
 
@@ -1459,7 +1428,6 @@ h4 {
     width: 738px;
   }
   .our-clients__headline {
-    margin-top: 58px;
     margin-bottom: 30px;
   }
   .our-clients__list {
@@ -1473,8 +1441,13 @@ h4 {
   }
 }
 @media (min-width: 1200px) {
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   .our-clients {
     width: 1170px;
+    margin-top: 0;
   }
   .our-clients__list {
     width: 1170px;
@@ -1484,14 +1457,13 @@ h4 {
             flex-direction: row;
     -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
-    margin: 0;
-  }
-  .our-clients__headline {
-    margin-top: 0;
-    margin-bottom: 50px;
+    margin-bottom: 0;
   }
   .our-clients__item {
     max-width: 170px;
+  }
+  .our-clients__headline {
+    margin-bottom: 50px;
   }
 }
 .modal {
@@ -1553,12 +1525,10 @@ h4 {
       align-content: center;
   padding: 40px;
 }
-
 .form-group__headline {
   width: 90%;
   text-align: center;
 }
-
 .form-group__label {
   font-weight: 400;
   font-size: 12px;
@@ -1567,16 +1537,13 @@ h4 {
   color: var(--alternative-color);
   margin-top: 10px;
 }
-
 .form-group__label--name {
   margin-top: 12px;
   position: relative;
 }
-
 .form-group__icon {
   margin: 11px 12px;
 }
-
 .form-group__input {
   border-radius: 4px;
   -moz-appearance: none;
@@ -1586,7 +1553,6 @@ h4 {
   outline: 0;
   width: 100%;
 }
-
 .form-group__btn {
   width: 200px;
   height: 50px;
@@ -1617,7 +1583,6 @@ h4 {
   -webkit-box-shadow: inset 200px 0 0 0 #1869ac;
           box-shadow: inset 200px 0 0 0 #1869ac;
 }
-
 .form-group__grid {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1630,6 +1595,20 @@ h4 {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-group__grid:hover, .form-group__grid:focus {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+.form-group__grid:hover svg, .form-group__grid:focus svg {
+  fill: #2196f3;
+}
+.form-group__grid:hover:has(input:focus), .form-group__grid:focus:has(input:focus) {
+  border: 1px solid #2196f3;
+  border-radius: 4px;
+}
+.form-group__grid:hover:has(input:focus) svg, .form-group__grid:focus:has(input:focus) svg {
+  fill: #2196f3;
 }
 .form-group__grid--textarea {
   max-width: 448px;
@@ -1673,24 +1652,6 @@ h4 {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.form-group__grid:hover,
-.form-group__grid:focus {
-  border: 1px solid #2196f3;
-  border-radius: 4px;
-}
-.form-group__grid:hover svg,
-.form-group__grid:focus svg {
-  fill: #2196f3;
-}
-
-.form-group__grid:has(input:focus) {
-  border: 1px solid #2196f3;
-  border-radius: 4px;
-}
-.form-group__grid:has(input:focus) svg {
-  fill: #2196f3;
-}
-
 .close__btn {
   position: absolute;
   cursor: pointer;
@@ -1702,8 +1663,7 @@ h4 {
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
 }
-
-.close__icon {
+.close__btn__icon {
   position: absolute;
   left: 22.23%;
   top: 16.67%;
@@ -1728,6 +1688,15 @@ h4 {
   background-color: #2196f3;
 }
 
+.check {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+  margin-left: 8px;
+  gap: 8px;
+}
 .check__link {
   font-weight: 400;
   font-size: 12px;
@@ -1735,7 +1704,6 @@ h4 {
   letter-spacing: 0.03em;
   color: #2196f3;
 }
-
 .check__text {
   width: 100%;
   font-weight: 400;
@@ -1745,17 +1713,6 @@ h4 {
   color: #757575;
   cursor: pointer;
 }
-
-.check__grid {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 20px;
-  margin-left: 8px;
-  gap: 8px;
-}
-
 .check__icon {
   margin-left: -21px;
 }
@@ -1779,7 +1736,7 @@ h4 {
   }
   .close__btn {
     left: 490px;
-    top: 8px;
+    top: 5px;
   }
   .check__text {
     font-size: 14px;
@@ -2041,9 +1998,7 @@ h4 {
   outline: none;
   padding: 12px 8px 12px 8px;
 }
-
-.menu__toggle:hover,
-.menu__toggle:focus {
+.menu__toggle:hover, .menu__toggle:focus {
   fill: #2196f3;
 }
 
@@ -2062,12 +2017,10 @@ h4 {
   transition: transform 500ms ease-in-out;
   transition: transform 500ms ease-in-out, -webkit-transform 500ms ease-in-out;
 }
-
 .menu-container.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
 }
-
 .menu-container .menu__toggle {
   position: absolute;
   top: 10px;
@@ -2081,11 +2034,9 @@ h4 {
   margin-top: 48px;
   margin-left: 40px;
 }
-
 .mobile-navigation__item:not(:last-child) {
   margin-bottom: 32px;
 }
-
 .mobile-navigation__link {
   color: #212121;
   font-weight: 500;
@@ -2095,12 +2046,14 @@ h4 {
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-
-.mobile-navigation__link:hover,
-.mobile-navigation__link:focus {
+.mobile-navigation__link:hover, .mobile-navigation__link:focus {
   color: #2196f3;
 }
 
+.mobile-contact {
+  margin-left: 40px;
+  margin-top: 302px;
+}
 .mobile-contact__link {
   color: #757575;
   font-weight: 500;
@@ -2110,21 +2063,12 @@ h4 {
   letter-spacing: 0.02em;
   text-decoration: none;
 }
-
+.mobile-contact__link:hover, .mobile-contact__link:focus {
+  color: #2196f3;
+}
 .mobile-contact__link--expand {
   font-size: 34px;
 }
-
-.mobile-contact__link:hover,
-.mobile-contact__link:focus {
-  color: #2196f3;
-}
-
-.mobile-contact {
-  margin-left: 40px;
-  margin-top: 302px;
-}
-
 .mobile-contact__item:not(:last-child) {
   margin-bottom: 32px;
 }
@@ -2138,12 +2082,10 @@ h4 {
   gap: 20px;
   height: 22px;
 }
-
 .mobile-social__item:not(:first-child) {
   border-left: 1px solid rgba(33, 33, 33, 0.2);
   padding-left: 10px;
 }
-
 .mobile-social__link {
   text-decoration: none;
   color: #2196f3;
