--- a/sass/components/_block.scss
+++ b/sass/components/_block.scss
@@ -4,29 +4,25 @@
   padding-bottom: 60px;
   width: 100%;
   margin: 0 auto;
-}
-
-.block__list {
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 30px;
-}
-
-.block__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.block__item:not(:last-child) {
-  margin-bottom: 30px;
-}
-
-.block__delay {
-  margin: 0 auto;
+  &__list {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+  }
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
+  &__delay {
+    margin: 0 auto;
+  }
 }
 
 .attribute {
@@ -34,125 +30,123 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.attribute__icon {
-  width: 100%;
-  height: 120px;
-  padding: 25px 0;
-  background-color: #f5f4fa;
-  border-radius: 4px;
-}
-
-.attribute__title {
-  display: flex;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  justify-content: center;
-}
-
-.attribute__text {
-  color: #757575;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  margin: 0;
+  &__icon {
+    width: 100%;
+    height: 120px;
+    padding: 25px 0;
+    background-color: #f5f4fa;
+    border-radius: 4px;
+  }
+  &__title {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    justify-content: center;
+  }
+  &__text {
+    color: #757575;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    margin: 0;
+  }
 }
 @media (min-width: 480px) and (max-width: 767px) {
   .block__list {
     width: 450px;
-  }
-  .block__item {
-    width: 450px;
-  }
-  .block__item:nth-child(n) {
-    margin-bottom: 0;
+    &__item {
+      width: 450px;
+      &:nth-child(n) {
+        margin-bottom: 0;
+      }
+    }
   }
   .attribute {
     width: 450px;
-  }
-  .attribute__icon {
-    justify-content: center;
-    width: 450px;
-    height: 120px;
-    padding: 25px 190px;
-  }
-  .attribute__title {
-    width: 450px;
-  }
-  .attribute__text {
-    width: 450px;
-    height: 50px;
+    &__icon {
+      justify-content: center;
+      width: 450px;
+      height: 120px;
+      padding: 25px 190px;
+    }
+    &__title {
+      width: 450px;
+    }
+    &__text {
+      width: 450px;
+      height: 50px;
+    }
   }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
   .block {
     margin-bottom: 45px;
-  }
-  .block__list {
-    width: 738px;
-    flex-direction: row;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .block__item {
-    width: 354px;
-    flex-basis: calc((100% - 30px) / 2);
-  }
-  .block__item:nth-child(n) {
-    margin-bottom: 0;
+    &__list {
+      width: 738px;
+      flex-direction: row;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    &__item {
+      width: 354px;
+      flex-basis: calc((100% - 30px) / 2);
+      &:nth-child(n) {
+        margin-bottom: 0;
+      }
+    }
   }
   .attribute {
     width: 354px;
-  }
-  .attribute__icon {
-    width: 354px;
-    height: 120px;
-    padding: 25px 142px;
-  }
-  .attribute__title {
-    width: 354px;
-    justify-content: flex-start;
-  }
-  .attribute__text {
-    width: 354px;
-    height: 65px;
+    &__icon {
+      width: 354px;
+      height: 120px;
+      padding: 25px 142px;
+    }
+    &__title {
+      width: 354px;
+      justify-content: flex-start;
+    }
+    &__text {
+      width: 354px;
+      height: 65px;
+    }
   }
 }
 @media (min-width: 1200px) {
+  @include padding-on-tablet;
   .block {
     margin-bottom: 0;
     padding-bottom: 0;
-  }
-  .block__delay {
-    width: 1170px;
-  }
-  .block__list {
-    width: 1170px;
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
-  }
-  .block__item {
-    width: 270px;
-    flex-basis: calc((100% - 90px) / 4);
-  }
-  .block__item:nth-child(n) {
-    margin-bottom: 0;
+    &__delay {
+      width: 1170px;
+    }
+    &__list {
+      width: 1170px;
+      display: flex;
+      flex-direction: row;
+      gap: 30px;
+    }
+    &__item {
+      width: 270px;
+      flex-basis: calc((100% - 90px) / 4);
+      &:nth-child(n) {
+        margin-bottom: 0;
+      }
+    }
   }
   .attribute {
     width: 270px;
-  }
-  .attribute__icon {
-    width: 270px;
-    height: 120px;
-    padding: 25px 100px;
-  }
-  .attribute__title {
-    width: 270px;
-    justify-content: flex-start;
-  }
-  .attribute__text {
-    width: 270px;
+    &__icon {
+      width: 270px;
+      height: 120px;
+      padding: 25px 100px;
+    }
+    &__title {
+      width: 270px;
+      justify-content: flex-start;
+    }
+    &__text {
+      width: 270px;
+    }
   }
 }
