--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,8 +7,8 @@
   text-decoration: none;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.logo:hover,
-.logo:focus {
-  color: $logoWebColor;
+  &:hover,
+  &:focus {
+    color: $logoWebColor;
+  }
 }
