--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -12,7 +12,38 @@
   background-position: center;
   background-repeat: no-repeat;
   margin: 0 auto;
+  &__title {
+    color: $secondaryColor;
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.61;
+    width: 365px;
+    margin-top: 118px;
+    margin-bottom: 0;
+    text-align: center;
+  }
+  &__button {
+    background-color: $logoWebColor;
+    color: $secondaryColor;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    cursor: pointer;
+    border: 0px solid;
+    border-radius: 4px;
+    width: 200px;
+    margin-top: 30px;
+    margin-bottom: 118px;
+    padding: 10px 41px 10px 42px;
+  }
+  &__overlay {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 auto;
+  }
 }
+
 @media (min-device-pixel-ratio: 2),
   (min-resolution: 192pi),
   (min-resolution: 2dppx) {
@@ -36,37 +67,6 @@
       ),
       url("../images/header/Img-header_1440_1200.jpg");
   }
-}
-
-.main-page__title {
-  color: $secondaryColor;
-  font-weight: 900;
-  font-size: 26px;
-  line-height: 1.61;
-  max-width: 365px;
-  margin-top: 118px;
-  margin-bottom: 0;
-  text-align: center;
-}
-.main-page__button {
-  background-color: $logoWebColor;
-  color: $secondaryColor;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  cursor: pointer;
-  border: 0px solid;
-  border-radius: 4px;
-  width: 200px;
-  margin-top: 30px;
-  margin-bottom: 118px;
-  padding: 10px 41px 10px 42px;
-}
-.main-page__overlay {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  margin: 0 auto;
 }
 
 @media (min-width: 480px) and (max-width: 767px) {
@@ -168,42 +168,42 @@
     background-position: center;
     background-repeat: no-repeat;
     margin: 0 auto;
-  }
-  @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192pi),
-    (min-resolution: 2dppx) {
-    .main-page {
-      background-image: linear-gradient(
-          0deg,
-          rgba(47, 48, 58, 0.4) 0%,
-          rgba(47, 48, 58, 0.4) 100%
-        ),
-        url("../images/header/Img-header_3200_1200.jpg");
+    &__title {
+      font-size: 44px;
+      line-height: 1.36;
+      width: 696px;
+      margin-top: 200px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    &__button {
+      margin-bottom: 200px;
+      margin-top: 0;
     }
   }
-  @media (min-device-pixel-ratio: 3),
-    (min-resolution: 268pi),
-    (min-resolution: 3dppx) {
-    .main-page {
-      background-image: linear-gradient(
-          0deg,
-          rgba(47, 48, 58, 0.4) 0%,
-          rgba(47, 48, 58, 0.4) 100%
-        ),
-        url("../images/header/Img_header_4800_1800.jpg");
-    }
-  }
+}
 
-  .main-page__title {
-    font-size: 44px;
-    line-height: 1.36;
-    max-width: 696px;
-    margin-top: 200px;
-    margin-bottom: 30px;
-    text-align: center;
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192pi),
+  (min-resolution: 2dppx) {
+  .main-page {
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("../images/header/Img-header_3200_1200.jpg");
   }
-  .main-page__button {
-    margin-bottom: 200px;
-    margin-top: 0;
+}
+@media (min-device-pixel-ratio: 3),
+  (min-resolution: 268pi),
+  (min-resolution: 3dppx) {
+  .main-page {
+    background-image: linear-gradient(
+        0deg,
+        rgba(47, 48, 58, 0.4) 0%,
+        rgba(47, 48, 58, 0.4) 100%
+      ),
+      url("../images/header/Img_header_4800_1800.jpg");
   }
 }
