--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -35,97 +35,93 @@
   flex-direction: column;
   align-content: center;
   padding: 40px;
-}
-.form-group__headline {
-  width: 90%;
-  text-align: center;
-}
-.form-group__label {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
-  color: var(--alternative-color);
-  margin-top: 10px;
-}
-
-.form-group__label--name {
-  margin-top: 12px;
-  position: relative;
-}
-
-.form-group__icon {
-  margin: 11px 12px;
-}
-.form-group__input {
-  border-radius: 4px;
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  appearance: none;
-  border: none;
-  outline: 0;
-  width: 100%;
-}
-
-.form-group__btn {
-  width: 200px;
-  height: 50px;
-  margin: 30px auto;
-  background: $logoWebColor;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  cursor: pointer;
-  border: 0px solid;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  box-shadow: inset 0 0 0 0 $boxShadowColor;
-  transition-property: box-shadow;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &:active,
-  &:hover {
-    box-shadow: inset 200px 0 0 0 $boxShadowColor;
+  &__headline {
+    width: 90%;
+    text-align: center;
   }
-}
-
-.form-group__grid {
-  display: flex;
-  width: 100%;
-  height: 40px;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  &--textarea {
-    max-width: 448px;
-    height: 138px;
-    resize: none;
-    outline: 0;
-    &::placeholder {
-      font-weight: 400;
-      font-size: 12px;
-      line-height: 1.16;
-      letter-spacing: 0.01em;
-      color: rgba(117, 117, 117, 0.5);
+  &__label {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--alternative-color);
+    margin-top: 10px;
+    &--name {
+      margin-top: 12px;
+      position: relative;
     }
   }
-}
-.form-group__grid:hover,
-.form-group__grid:focus {
-  border: 1px solid $logoWebColor;
-  border-radius: 4px;
-  & svg {
-    fill: $logoWebColor;
+  &__icon {
+    margin: 11px 12px;
   }
-}
-.form-group__grid:has(input:focus) {
-  border: 1px solid $logoWebColor;
-  border-radius: 4px;
-  & svg {
-    fill: $logoWebColor;
+  &__input {
+    border-radius: 4px;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    border: none;
+    outline: 0;
+    width: 100%;
+  }
+  &__btn {
+    width: 200px;
+    height: 50px;
+    margin: 30px auto;
+    background: $logoWebColor;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    cursor: pointer;
+    border: 0px solid;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    color: #ffffff;
+    box-shadow: inset 0 0 0 0 $boxShadowColor;
+    transition-property: box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:active,
+    &:hover {
+      box-shadow: inset 200px 0 0 0 $boxShadowColor;
+    }
+  }
+  &__grid {
+    display: flex;
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+      border: 1px solid $logoWebColor;
+      border-radius: 4px;
+      & svg {
+        fill: $logoWebColor;
+      }
+      &:has(input:focus) {
+        border: 1px solid $logoWebColor;
+        border-radius: 4px;
+        & svg {
+          fill: $logoWebColor;
+        }
+      }
+    }
+    &--textarea {
+      max-width: 448px;
+      height: 138px;
+      resize: none;
+      outline: 0;
+      &::placeholder {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+        color: rgba(117, 117, 117, 0.5);
+      }
+    }
   }
 }
 
@@ -139,11 +135,11 @@
   background: $secondaryColor;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-}
-.close__icon {
-  position: absolute;
-  left: 22.23%;
-  top: 16.67%;
+  &__icon {
+    position: absolute;
+    left: 22.23%;
+    top: 16.67%;
+  }
 }
 
 .check__input {
@@ -162,34 +158,31 @@
     background-color: $logoWebColor;
   }
 }
-
-.check__link {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  color: $logoWebColor;
-}
-.check__text {
-  width: 100%;
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  color: $alternativeColor;
-  cursor: pointer;
-}
-
-.check__grid {
+.check {
   width: 100%;
   display: flex;
   margin-top: 20px;
   margin-left: 8px;
   gap: 8px;
-}
-
-.check__icon {
-  margin-left: -21px;
+  &__link {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color: $logoWebColor;
+  }
+  &__text {
+    width: 100%;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    color: $alternativeColor;
+    cursor: pointer;
+  }
+  &__icon {
+    margin-left: -21px;
+  }
 }
 @media (min-width: 480px) and (max-width: 1199px) {
   .modal {
@@ -210,7 +203,7 @@
   }
   .close__btn {
     left: 490px;
-    top: 8px;
+    top: 5px;
   }
   .check__text {
     font-size: 14px;
