--- a/sass/components/_our-clients.scss
+++ b/sass/components/_our-clients.scss
@@ -4,47 +4,47 @@
   display: flex;
   justify-content: center;
   margin: 0 auto;
-}
-.our-clients__overlay {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  flex-direction: column;
-  margin: 0 auto;
-}
-.our-clients__headline {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  margin-top: 0;
-  margin-bottom: 30px;
+  padding: 0;
   margin-top: 60px;
-}
-
-.our-clients__list {
-  display: flex;
-  width: 100%;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 30px;
-  justify-content: center;
-  margin-bottom: 60px;
-}
-.our-clients__item {
-  fill: $colorFiller;
-  height: 92px;
-  border-radius: 4px;
-  flex-basis: calc((100% - 2 * 30px) / 2);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  animation: cursormovein 0.5s forwards;
-}
-.our-clients__item:hover {
-  animation: cursormoveout 0.5s forwards;
-}
-.our-clients__icon {
-  width: 106px;
+  &s__overlay {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    flex-direction: column;
+    margin: 0 auto;
+  }
+  &__headline {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 0;
+  }
+  &__list {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 30px;
+    margin-top: 0;
+    justify-content: center;
+    margin-bottom: 60px;
+  }
+  &__item {
+    fill: $colorFiller;
+    height: 92px;
+    border-radius: 4px;
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation: cursormovein 0.5s forwards;
+    &:hover {
+      animation: cursormoveout 0.5s forwards;
+    }
+    &__icon {
+      width: 106px;
+    }
+  }
 }
 
 @keyframes cursormoveout {
@@ -71,50 +71,46 @@
 @media (min-width: 480px) and (max-width: 767px) {
   .our-clients {
     width: 450px;
-  }
-
-  .our-clients__list {
-    margin-bottom: 60px;
-  }
-  .our-clients_item {
-    width: 210px;
+    &__list {
+      margin-bottom: 60px;
+    }
+    &_item {
+      width: 210px;
+    }
   }
 }
-
 @media (min-width: 768px) and (max-width: 1199px) {
   .our-clients {
     width: 738px;
-  }
-
-  .our-clients__headline {
-    margin-top: 58px;
-    margin-bottom: 30px;
-  }
-  .our-clients__list {
-    width: 738px;
-    margin-top: 0;
-  }
-  .our-clients__item {
-    width: 226px;
-    flex-basis: calc((100% - 2 * 30px) / 3);
+    &__headline {
+      margin-bottom: 30px;
+    }
+    &__list {
+      width: 738px;
+      margin-top: 0;
+    }
+    &__item {
+      width: 226px;
+      flex-basis: calc((100% - 2 * 30px) / 3);
+    }
   }
 }
 @media (min-width: 1200px) {
+  @include padding-on-tablet;
   .our-clients {
     width: 1170px;
-  }
-
-  .our-clients__list {
-    width: 1170px;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    margin: 0;
-  }
-  .our-clients__headline {
     margin-top: 0;
-    margin-bottom: 50px;
-  }
-  .our-clients__item {
-    max-width: 170px;
+    &__list {
+      width: 1170px;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      margin-bottom: 0;
+    }
+    &__item {
+      max-width: 170px;
+    }
+    &__headline {
+      margin-bottom: 50px;
+    }
   }
 }
