--- a/sass/components/_ourteam.scss
+++ b/sass/components/_ourteam.scss
@@ -3,61 +3,57 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
+  padding: 0;
   justify-content: center;
   margin: 0 auto;
-  padding-bottom: 60px;
-}
-.ourteam__delay {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
 
-.ourteam__list {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 0;
-  gap: 30px;
-}
-.ourteam__picture {
-  width: 100%;
-}
-
-.ourteam__item {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  background-color: $secondaryColor;
-}
-.ourteam__item:not(:last-child) {
-  margin-bottom: 30px;
-}
-.ourteam__item:last-child {
-  margin-bottom: 60px;
-}
-.ourteam__headline {
-  width: 163px;
-  margin-bottom: 30px;
-  margin-top: 60px;
-}
-.ourteam__name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.17;
-  margin: 30px 99px 10px 99px;
-}
-.ourteam__position {
-  color: $alternativeColor;
-  font-size: 16px;
-  line-height: 1.17;
-  margin-top: 10px;
-  margin-bottom: 16px;
+  &__delay {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  &__list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    gap: 30px;
+  }
+  &__picture {
+    width: 100%;
+  }
+  &__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: $secondaryColor;
+    &:last-child {
+      margin-bottom: 60px;
+    }
+  }
+  &__headline {
+    width: 163px;
+    margin-bottom: 30px;
+    margin-top: 60px;
+  }
+  &__name {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.17;
+    margin: 30px 99px 10px 99px;
+  }
+  &__position {
+    color: $alternativeColor;
+    font-size: 16px;
+    line-height: 1.17;
+    margin-top: 10px;
+    margin-bottom: 16px;
+  }
 }
 
 .social {
@@ -98,6 +94,8 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 30px;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-bottom: 62px;
   }
   .ourteam__delay {
@@ -107,20 +105,21 @@
     width: 354px;
     height: 536px;
     margin: 0;
+    &:not(:last-child) {
+      margin-bottom: 0;
+    }
+    &:last-child {
+      margin-bottom: 0;
+    }
+    .ourteam__picture {
+      width: 354px;
+      height: 374px;
+    }
   }
-  .ourteam__picture {
-    width: 354px;
-    height: 374px;
-  }
-}
-.ourteam__item:not(:last-child) {
-  margin-bottom: 0;
-}
-.ourteam__item:last-child {
-  margin-bottom: 0;
 }
 
 @media (min-width: 1200px) {
+  @include padding-on-tablet;
   .ourteam__list {
     display: flex;
     width: 1170px;
