--- a/css/main.css
+++ b/css/main.css
@@ -1280,13 +1280,10 @@ h4 {
   .ourteam__item:nth-child(n) {
     margin-bottom: 0;
   }
-  .ourteam__headline {
+  .ourteam__item .ourteam__headline {
     width: 210px;
     margin-bottom: 50px;
     margin-top: 0;
-  }
-  .ourteam__position {
-    margin: 0;
   }
 }
 .our-clients {
