--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -130,6 +130,7 @@
   cursor: pointer;
   width: 30px;
   height: 30px;
+  left: 90%;
   top: 8px;
   background: $secondaryColor;
   border: 1px solid rgba(0, 0, 0, 0.1);
