--- a/css/main.css
+++ b/css/main.css
@@ -1653,6 +1653,7 @@ h4 {
   cursor: pointer;
   width: 30px;
   height: 30px;
+  left: 90%;
   top: 8px;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
