--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -86,7 +86,7 @@
     margin: 0 auto;
   }
   @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192pi),
+    (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .main-page {
       background-image: linear-gradient(
@@ -98,7 +98,7 @@
     }
   }
   @media (min-device-pixel-ratio: 3),
-    (min-resolution: 268pi),
+    (min-resolution: 268dpi),
     (min-resolution: 3dppx) {
     .main-page {
       background-image: linear-gradient(
@@ -128,7 +128,7 @@
     margin: 0 auto;
   }
   @media (min-device-pixel-ratio: 2),
-    (min-resolution: 192pi),
+    (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
     .main-page {
       background-image: linear-gradient(
@@ -140,7 +140,7 @@
     }
   }
   @media (min-device-pixel-ratio: 3),
-    (min-resolution: 268pi),
+    (min-resolution: 268dpi),
     (min-resolution: 3dppx) {
     .main-page {
       background-image: linear-gradient(
